Fixed full-page layout issue

--- a/src/client/styles/styles.sass
+++ b/src/client/styles/styles.sass
@@ -6,9 +6,8 @@ body
   padding: 0
   margin: 0
 
-#appContainer
+#appContainer, .topContainer
   overflow: hidden
-  display: flex
   left: 0
   right: 0
   bottom: 0
@@ -18,7 +17,6 @@ body
 .topContainer
   display: flex
   flex-direction: column
-  overflow: hidden
 
 .appHeader
   background: #8AC
@@ -56,7 +54,6 @@ td
 th, td
   padding-left: 5px
   padding-right: 5px
-
 
 tr
   border-bottom: 1px solid #666
